[package]
name = "sedentary"
version = "0.1.0"
edition = "2024"
description = "A simple to-do app with water break reminders"
license = "MIT"
repository = "https://github.com/busyboredom/sedentary"
readme = "README.md"
keywords = ["cosmic", "todo", "productivity", "pomodoro"]
categories = ["gui"]

[dependencies]
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["webp"] }
rodio = "0.22"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = [
    "tokio",
    "winit",
    "wayland",
    "wgpu",
]

[dev-dependencies]
serde_json = "1"
